# Swaglords-Of-Space

./: CMakeLists.txt
include/: Game.h  Player.h  Polygon.h  Projectile.h
src/: Game.cpp  Player.cpp  Polygon.cpp  Projectile.cpp  main.cpp
